[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/dummyfighter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110.5, 218.5 )

[node name="Node2D" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -0.499992, -89.5 )
scale = Vector2( 3.60938, 6.85938 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -0.5, -89.5 )
shape = SubResource( 1 )

[node name="groundCheck" type="RayCast2D" parent="KinematicBody2D"]
enabled = true
cast_to = Vector2( 0, 150 )

[node name="stunTimer" type="Timer" parent="KinematicBody2D"]

[connection signal="timeout" from="KinematicBody2D/stunTimer" to="KinematicBody2D" method="_on_stunTimer_timeout"]
